--- a/src/components/organisms/gameTable/styles/game-table.css
+++ b/src/components/organisms/gameTable/styles/game-table.css
@@ -33,6 +33,8 @@
   height: 100%;
   font-size: 1.2rem;
   font-weight: bold;
+  position: relative;
+  z-index: 1;
 }
 
 .playershand {
@@ -43,6 +45,8 @@
   height: 100%;
   font-size: 1.2rem;
   font-weight: bold;
+  position: relative;
+  z-index: 10;
 }
 
 /* Hide mobile button on desktop */
