--- a/src/components/organisms/playersHand/styles/players-hand.css
+++ b/src/components/organisms/playersHand/styles/players-hand.css
@@ -38,19 +38,19 @@
   width: 100%;
   flex-wrap: nowrap;
 
-  @media (max-width: 1200px) {
+  /* @media (max-width: 1200px) {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: auto;
     gap: 16px;
-  }
+  } */
 
-  @media (max-width: 1028px) {
+  /* @media (max-width: 1028px) {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: auto;
     gap: 14px;
-  }
+  } */
 
   @media (max-width: 768px) {
     display: grid;
@@ -65,7 +65,6 @@
     grid-auto-rows: auto;
     gap: 8px;
   }
-
   @media (max-height: 600px) {
     display: flex;
     flex-wrap: wrap;
