--- a/src/components/templates/gamePage/styles/game-page.css
+++ b/src/components/templates/gamePage/styles/game-page.css
@@ -1,4 +1,34 @@
 .game-page {
+  width: 100%;
+  max-width: 100vw;
   height: 100vh;
-  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  overflow: hidden;
+
+  * {
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+
+  .main-table,
+  .players-hand {
+    width: 100vw;
+    min-width: 100vw;
+    max-width: 100vw;
+    scroll-snap-align: start;
+  }
+
+  @media (max-height: 600px) and (min-width: 769px) {
+    width: 200vw;
+    max-width: 200vw;
+    flex-direction: row;
+  }
+
+  /* Ensure GameTable and children don't exceed their containers */
+  .game-table {
+    width: 100%;
+    max-width: 100%;
+  }
 }
