--- a/src/components/molecules/header/styles/header.css
+++ b/src/components/molecules/header/styles/header.css
@@ -1,62 +1,75 @@
 .app-header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: var(--width-full);
-    padding: var(--spacing-2xl);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 2;
-}
-.header-button {
-    border: none;
-    border-radius: 12px;
-    background: transparent;
-    cursor: pointer;
-    font-size: var(--font-size-sm);
-    color: #fff;
-    font-family: 'Subway Berlin', sans-serif;
-    display: flex;
-    align-items: center;
-    padding-inline-start: 0;
-    padding-inline-end: var(--spacing-sm);
-    padding-block: var(--spacing-xs);
-    transition: all 0.3s ease;
-    -webkit-text-stroke: 15px black;
-    paint-order: stroke fill;
-}
-.header-button:hover {
-    transform: scale(1.1);
-}
-.header-button:active, .header-button:focus, .header-button:focus-visible {
-    outline: 2px solid white;
-    outline-offset: 2px;
-}
-.header-button-image {
-    width: auto;
-    height: clamp(24px, 1.5vw, 48px);
-    margin-right: 16px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: var(--width-full);
+  padding: var(--spacing-2xl);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 2;
+
+  .next-button {
+    display: none;
 
     @media (max-height: 600px) {
-        height: 36px;
-        margin-right: 12px;
+      display: flex;
+      margin-top: 0;
     }
+  }
+}
+
+.header-button {
+  border: none;
+  border-radius: 12px;
+  background: transparent;
+  cursor: pointer;
+  font-size: var(--font-size-sm);
+  color: #fff;
+  font-family: "Subway Berlin", sans-serif;
+  display: flex;
+  align-items: center;
+  padding-inline-start: 0;
+  padding-inline-end: var(--spacing-sm);
+  padding-block: var(--spacing-xs);
+  transition: all 0.3s ease;
+  -webkit-text-stroke: 15px black;
+  paint-order: stroke fill;
+}
+.header-button:hover {
+  transform: scale(1.1);
+}
+.header-button:active,
+.header-button:focus,
+.header-button:focus-visible {
+  outline: 2px solid white;
+  outline-offset: 2px;
+}
+.header-button-image {
+  width: auto;
+  height: clamp(24px, 1.5vw, 48px);
+  margin-right: 16px;
+
+  @media (max-height: 600px) {
+    height: 36px;
+    margin-right: 12px;
+  }
 }
 .header-button-image-right {
-    margin-right: 0;
-    margin-left: 16px;
+  margin-right: 0;
+  margin-left: 16px;
 }
 
 .header-button-play {
-    animation: pulse 1s infinite;
+  animation: pulse 1s infinite;
 }
 
 @keyframes pulse {
-    0%, 100% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.1);
-    }
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
 }
