--- a/src/components/organisms/nameSelection/styles/name-selection.css
+++ b/src/components/organisms/nameSelection/styles/name-selection.css
@@ -8,9 +8,9 @@
   padding: var(--spacing-lg);
 }
 
-.name-selection-next-button{
-    display: flex;
-    justify-content: center;
+.name-selection-next-button {
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 1024px) {
@@ -37,7 +37,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
   }
   .name-selection__content {
     display: grid;
@@ -60,9 +59,7 @@
     text-align: left;
   }
   .name-selection-next-button {
-      display: flex;
-      justify-content: flex-end;
-      margin-right: 110px;
+    display: none;
   }
 }
 
