--- a/src/components/templates/homePage/styles/home-page.css
+++ b/src/components/templates/homePage/styles/home-page.css
@@ -16,6 +16,18 @@
   max-width: 70vw;
   text-align: center;
 
+  @media (min-width: 3731px) {
+    max-width: 20vw;
+  }
+
+  @media (min-width: 2239px) and (max-width: 3730px) {
+    max-width: 30vw;
+  }
+
+  @media (min-width: 1600px) and (max-width: 2238px) {
+    max-width: 50vw;
+  }
+
   @media (max-height: 600px) and (orientation: landscape) {
     margin-top: 0;
     margin-bottom: var(--spacing-4xl);
