--- a/src/App.css
+++ b/src/App.css
@@ -73,8 +73,8 @@
 
 /* Global styles */
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: clamp(100svw, 100dvw, 100lvw);
+  height: clamp(100svh, 100dvh, 100lvh);
   margin: 0;
   padding: 0;
   text-align: center;
