--- a/src/components/atoms/background/styles/background.css
+++ b/src/components/atoms/background/styles/background.css
@@ -2,10 +2,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  max-width: 100vw;
-  max-height: 100vh;
+  width: clamp(100svw, 100dvw, 100lvw);
+  height: clamp(100svh, 100dvh, 100lvh);
+  max-width: clamp(100svw, 100dvw, 100lvw);
+  max-height: clamp(100svh, 100dvh, 100lvh);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
