--- a/src/components/organisms/gameTable/styles/game-table.css
+++ b/src/components/organisms/gameTable/styles/game-table.css
@@ -1,6 +1,6 @@
 .game-wrapper {
   width: 100%;
-  height: 100vh;
+  height: clamp(100svh, 100dvh, 100lvh);
   overflow: hidden;
   position: relative;
 }
@@ -58,10 +58,10 @@
 @media (max-height: 600px) {
   .container {
     display: grid;
-    grid-template-columns: 100vw 100vw;
-    grid-template-rows: 15vh 80vh;
-    width: 200vw;
-    height: 100vh;
+    grid-template-columns: clamp(100svw, 100dvw, 100lvw) clamp(100svw, 100dvw, 100lvw);
+    grid-template-rows: 15dvh 80dvh;
+    width: 200dvw;
+    height: clamp(100svh, 100dvh, 100lvh);
     gap: 0;
     padding: 0;
     margin: 0;
@@ -86,10 +86,10 @@
 
   .playershand {
     position: absolute;
-    left: 100vw;
-    top: 3vh;
-    width: 100vw;
-    height: 100vh;
+    left: clamp(100svw, 100dvw, 100lvw);
+    top: 3dvh;
+    width: clamp(100svw, 100dvw, 100lvw);
+    height: clamp(100svh, 100dvh, 100lvh);
     display: flex;
     align-items: center;
     justify-content: center;
