--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,8 @@
 
 html {
   overflow: hidden;
-  width: 100vw;
-  height: 100vh;
+  width: clamp(100svw, 100dvw, 100lvw);
+  height: clamp(100svh, 100dvh, 100lvh);
   position: fixed;
 }
 
@@ -28,8 +28,8 @@ body {
   margin: 0;
   padding: 0;
   min-width: 320px;
-  width: 100vw;
-  height: 100vh;
+  width: clamp(100svw, 100dvw, 100lvw);
+  height: clamp(100svh, 100dvh, 100lvh);
   overflow: hidden;
   position: fixed;
 }
